[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ryanair"
version = "0.1.2"
description = "Python Package to manage and retrieve information about Ryanair flights and fares"
readme = "README.md"
authors = [
    {name = "Alessio", email = "alessiovecchi00@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "grequests>=0.7.0",
    "requests>=2.28.0",
    "tomli>=2.0.1;python_version<'3.11'",
]

[project.urls]
"Homepage" = "https://github.com/aleve99/ryanair"
"Bug Tracker" = "https://github.com/aleve99/ryanair/issues" 